# mesa-software-only-builds

./: .gitignore  .gitmodules  README.md
.github/workflows/: build.yml
mesa-overlay/: macos_compat.h
mesa-overlay/gallium/targets/softmesa/: meson.build  softmesa.c  softmesa.def  softmesa.exported_symbols
mesa-overlay/gallium/targets/softpipe_gl/: drm_stubs.c  meson.build  softpipe_gl.c  softpipe_gl.def  softpipe_gl.sym
tests/interop/: interop.c  run.sh
tests/smoke/: run.sh  smoke.c
tests/smoke/shaders/: gen-spirv.sh  quad.frag  quad.frag.spv.h  quad.vert  quad.vert.spv.h
